--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.3.1",
     "express": "^4.22.1",
+    "firebase-admin": "^13.6.1",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1"
   }
