--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "dotenv": "^17.3.1",
     "express": "^4.22.1",
     "firebase-admin": "^13.6.1",
+    "jspdf": "^4.2.0",
     "mongoose": "^8.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2"
   }
 }
