--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.9.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "jspdf": "^4.2.0",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-chatbotify": "^2.4.1",
