--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "jspdf": "^4.2.0",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^8.0.1",
     "pdfkit": "^0.17.2"
   }
 }
