--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cms-backend",
   "type": "commonjs",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.3.1",
@@ -11,5 +15,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^8.0.1",
     "pdfkit": "^0.17.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.14"
   }
 }
