--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,21 +8,25 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # ===== FRONTEND BUILD =====
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install & Build
+      - name: Install & Build Frontend
         run: |
           npm install
           npm run build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
+      # ===== VPS DEPLOY =====
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -31,8 +35,11 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /var/www/myapp
-            rm -f .env.production
-            git stash
-            git pull
+            git pull origin main
+
+            # Backend update
+            cd backend
             npm install
-            npm run build
+            pm2 restart myapp
+
+            echo "🚀 Deployment Completed"
